--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Python - pyboys.com</title>
+    <title>Learn Python - pyboy.ai</title>
 </head>
 <body>
     <header
         <h1>Learn Python</h1>
     </header>
     <footer>
-        <p>&copy; 2024 pyboys.com</p>
+        <p>&copy; 2024 pyboy.ai</p>
     </footer>
 </body>
 </html>
